Add website content

--- a/website/index.html
+++ b/website/index.html
@@ -1,8 +1,33 @@
 <!-- website/index.html -->
-<html>
-  <head><title>Fusion Feast</title></head>
-  <body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Fusion Feast</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
     <h1>Welcome to Fusion Feast</h1>
     <p>Explore Indian fusion dessert recipes with a DevSecOps twist!</p>
-  </body>
+  </header>
+
+  <main>
+    <section class="featured">
+      <h2>Featured Recipes</h2>
+      <ul>
+        <li><a href="recipes/gulab-jamun-kunafa.html">Gulab Jamun Kunafa</a></li>
+        <li><a href="recipes/rasmalai-tiramisu.html">Rasmalai Tiramisu</a></li>
+        <li><a href="recipes/jalebi-ice-cream.html">Jalebi Ice Cream Sandwich</a></li>
+        <li><a href="recipes/chai-macarons.html">Chai-Spiced Macarons</a></li>
+        <li><a href="recipes/ghevar-cheesecake.html">Ghevar Cheesecake</a></li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 Fusion Feast. Crafted with love and cardamom.</p>
+  </footer>
+</body>
 </html>
